--- a/client/app/src/main/res/layout/activity_phone_details.xml
+++ b/client/app/src/main/res/layout/activity_phone_details.xml
@@ -6,4 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".PhoneDetailsActivity">
 
+    <TextView
+        android:id="@+id/text_current_city"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.206" />
+
+    <TextView
+        android:id="@+id/text_phone_manufacturer"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.467" />
+
+    <TextView
+        android:id="@+id/text_phone_model"
+        android:layout_width="340dp"
+        android:layout_height="75dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.719" />
 </androidx.constraintlayout.widget.ConstraintLayout>
